Fix wrong box-shadow visual overflow with flipped blocks writing mode

BUG=599573
TEST=fast/box-shadow/shadow-box-resize-writing-mode.html
TEST=LayoutObjectTest.OverflowRectMappingWithSelfFlippedWritingMode
TEST=LayoutObjectTest.OverflowRectMappingWithContainerFlippedWritingMode

Review URL: https://codereview.chromium.org/1846753004

Cr-Commit-Position: refs/heads/master@{#384613}

Former-commit-id: ac7511d8075f109d87040a2d782b641d4b8e40c9